Update 344 group project_3nd on 10_16.ipynb

--- a/344 group project_3nd on 10_16.ipynb
+++ b/344 group project_3nd on 10_16.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "### 2. How to decide the stratified?\n",
-    "- create a table to show the varience between each strata, the better the best"
+    "- create a table to show the varience between each strata, the larger the best"
    ]
   },
   {
