Update 344 group project_3nd on 10_16.ipynb

--- a/344 group project_3nd on 10_16.ipynb
+++ b/344 group project_3nd on 10_16.ipynb
@@ -235,7 +235,7 @@
    "id": "2ca2471b-03a9-463d-847a-67066e691b27",
    "metadata": {},
    "source": [
-    "### Random select sample"
+    "### Random select sample (SRS)"
    ]
   },
   {
